<resources>
    <string name="app_name">Android_AppReplicante</string>
    <string name="titulo">GoodFood</string>
    <string name="subtitulo">Instant Food Delivery</string>
    <string name="remenber">Forgot?</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign">Sign in with Facebook</string>
    <string name="correo">kanad.saha@innofied.com</string>
    <string name="contra">.......</string>
    <string name="confirma">Confirma?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="reserva">Reservar</string>
    <string name="plato_name">Nombre de plato</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>