<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginLeft="120dp"
        app:srcCompat="@drawable/plato1" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <TextView
            android:id="@+id/subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:textSize="15dp"
            android:text="@string/subtitulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <!-- PRIMER LINEAR QUE UBICA LA FOTO Y EL USER-->
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/mensaje" />

        <EditText
            android:id="@+id/register"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="15sp" />

    </LinearLayout>

    <!-- SEGUNDO LINEAR QUE UBICA LA FOTO Y EL USER-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/candado1" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginLeft="25dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remenber"
            android:textColor="@color/verde" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="66dp">

            <Button
                android:id="@+id/inicia"
                android:layout_width="182dp"
                android:layout_height="63dp"
                android:layout_marginLeft="60dp"
                android:paddingTop="10dp"
                app:backgroundTint="@color/verde"
                android:paddingBottom="10dp"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="#2E7D32" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user" />
            </LinearLayout>
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="28dp"
            android:layout_height="24dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/facebook" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/sign"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="164dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/plato2" />
    </LinearLayout>

</LinearLayout>
