<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/textoaparecer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="140dp"
        android:hint="@string/plato_name" />

    <Button
        android:id="@+id/prueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:gravity="center_horizontal"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="140dp"
        android:text="@string/reserva" />

    <Button
        android:id="@+id/llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="140dp"
        android:text="llamar" />

    <TextView
        android:id="@+id/confirma"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="150dp"
        android:text=""
        />


    <TextView
        android:id="@+id/textoLetra"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="150dp"
        android:text="@string/confirma"
        />

</LinearLayout>